--- a/app/src/main/assets/css/index.css
+++ b/app/src/main/assets/css/index.css
@@ -13,10 +13,52 @@ HTML, body, #MAIN {
   top: 0.5em;
   right: 0.25em;
 }
+
 .bo-layercontrol-select > select {
   padding: 0.25em;
   font-size: 1.25em;
 }
+
+/* 2020-04-03 Added */
+.bo-layercontrol-root {
+  margin: 0;
+  padding: 0;
+  font-size: 0.5cm;
+}
+
+.bo-layercontrol-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: auto;
+}
+
+.bo-layercontrol-labelwrap,
+.bo-layercontrol-item {
+  margin: 0;
+  padding: 0.5em 1.25em 0.5em 0.5em;
+  background: #fff;
+  border: solid 1px #666;
+  cursor: pointer;
+  position: relative;
+}
+
+.bo-layercontrol-hit {
+  background: #ccc;
+}
+
+.bo-layercontrol-label {
+  display: inline;
+}
+
+.bo-layercontrol-labelswitch {
+  position: absolute;
+  right: 0.5em;
+  top: 0.5em;
+  width: 0.5em;
+  height: 0.5em;
+}
+
 
 #MAPCONSOLE-ROOT {
   z-index: 1000; /* leaflet set by 200 */
@@ -105,16 +147,32 @@ HTML, body, #MAIN {
   text-align: center;
 }
 
+/* 2020-04-01 changed: margin added */
 .icon-wrap {
   width: 2em;
   height: 2em;
-  padding: 0.5em;
+  padding: 0.25em;
   display: inline-block;
+  margin: 0.25em;
 }
+
+/* 2020-04-01 added: hover, active at icon */
+.icon-wrap:hover {
+  background: #ffc;
+}
+
+.icon-wrap:active {
+  background: #fee;
+}
+
 
 .icon, icon-active, icon-inactive {
   margin: 0.25em;
 }
+
+
+
+
 
 .icon {
   stroke: #000;
