--- a/app/src/main/assets/css/index.css
+++ b/app/src/main/assets/css/index.css
@@ -6,6 +6,16 @@ HTML, body, #MAIN {
   top: 0;
   width: 100%;
   height: 100%;
+  border: 0;
+}
+
+/* 2022-05-10 Added. */
+body {
+    overflow: hidden;
+}
+/* 2022-05-10 Added. */
+#MAIN {
+  user-select: none;
 }
 
 /* 2021-04-01 removed: bo-layercontrol */
